# sqlmesh-runescape

./: .gitignore  Makefile  README.md  pyproject.toml
src/sqlmesh_runescape/: __init__.py  config.yaml  db.db
src/sqlmesh_runescape/audits/: assert_positive_order_ids.sql
src/sqlmesh_runescape/models/: hourly_scrape.sql  runescape_mapping.sql  train.py  train.py.txt
src/sqlmesh_runescape/tests/: test_full_model.yaml.txt
