[project]
name = "sqlmesh-runescape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "ben.epstein97@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1.3",
    "polars>=1.17.1",
    "sqlmesh[web]>=0.140.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
]
